<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="applicationLabel">Phone</string>
    <string name="launcherActivityLabel">Phone</string>
    <string name="launcherDialpadActivityLabel">Phone Dialpad</string>
    <string name="dialerIconLabel">Phone</string>
    <string name="callHistoryIconLabel">Call history</string>
    <string name="action_report_number">Report inaccurate number</string>
    <string name="action_copy_number_text">Copy number</string>
    <string name="copy_transcript_text">Copy transcription</string>
    <string name="action_block_number">Block number</string>
    <string name="snackbar_number_blocked">
        <xliff:g id="number" example="(555) 555-5555">%1$s</xliff:g> blocked</string>
    <string name="action_unblock_number">Unblock number</string>
    <string name="snackbar_number_unblocked">
        <xliff:g id="number" example="(555) 555-5555">%1$s</xliff:g>
        unblocked</string>
    <string name="block_number_undo">UNDO</string>
    <string name="call_details_delete">Delete</string>
    <string name="action_edit_number_before_call">Edit number before call</string>
    <string name="call_log_delete_all">Clear call history</string>
    <string name="call_log_trash_voicemail">Delete voicemail</string>
    <string name="call_log_archive_voicemail">Archive voicemail</string>
    <string name="call_log_share_voicemail">Share voicemail</string>
    <string name="snackbar_voicemail_deleted">Voicemail deleted</string>
    <string name="snackbar_voicemail_archived">Voicemail archived</string>
    <string name="snackbar_voicemail_deleted_undo">UNDO</string>
    <string name="snackbar_voicemail_archived_goto">GOTO ARCHIVE</string>
    <string name="clearCallLogConfirmation_title">Clear call history?</string>
    <string name="clearCallLogConfirmation">This will delete all calls from your history</string>
    <string name="clearCallLogProgress_title">Clearing call history\u2026</string>
    <string name="userCallActivityLabel" product="default">Phone</string>
    <string name="notification_missedCallTitle">Missed call</string>
    <string name="notification_missedWorkCallTitle">Missed work call</string>
    <string name="notification_missedCallsTitle">Missed calls</string>
    <string name="notification_missedCallsMsg"><xliff:g id="num_missed_calls">%s</xliff:g> missed calls</string>
    <string name="notification_missedCall_call_back">Call back</string>
    <string name="notification_missedCall_message">Message</string>
    <string name="handle_restricted">RESTRICTED</string>
    <plurals name="notification_voicemail_title">
        <item quantity="one">Voicemail</item>
        <item quantity="other">
            <xliff:g id="count">%1$d</xliff:g>
            Voicemails
        </item>
    </plurals>
    <string name="notification_action_voicemail_play">Play</string>
    <string name="notification_voicemail_callers_list"><xliff:g id="newer_callers">%1$s</xliff:g>,
        <xliff:g id="older_caller">%2$s</xliff:g>
    </string>
    <string name="notification_new_voicemail_ticker">New voicemail from
        <xliff:g id="caller">%1$s</xliff:g>
    </string>
    <string name="voicemail_playback_error">Couldn\'t play voicemail</string>
    <string name="voicemail_fetching_content">Loading voicemail\u2026</string>
    <string name="voicemail_archiving_content">Archiving voicemail\u2026</string>
    <string name="voicemail_fetching_timout">Couldn\'t load voicemail</string>
    <string name="call_log_voicemail_header">Calls with voicemail only</string>
    <string name="call_log_incoming_header">Incoming calls only</string>
    <string name="call_log_outgoing_header">Outgoing calls only</string>
    <string name="call_log_missed_header">Missed calls only</string>
    <string name="visual_voicemail_title">Visual voicemail</string>
    <string name="visual_voicemail_text">
        See and listen to your voicemail, without having to call a number. Data charges may apply.
    </string>
    <string name="visual_voicemail_settings">Settings</string>
    <string name="voicemail_status_voicemail_not_available">Voicemail updates not available</string>
    <string name="voicemail_status_messages_waiting">New voicemail waiting. Can\'t load right now.</string>
    <string name="voicemail_status_configure_voicemail">Set up your voicemail</string>
    <string name="voicemail_status_audio_not_available">Audio not available</string>
    <string name="voicemail_status_action_configure">Set up</string>
    <string name="voicemail_status_action_call_server">Call voicemail</string>
    <string name="call_log_item_count_and_date">(<xliff:g id="count">%1$d</xliff:g>)
        <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="sms_disambig_title">Choose number</string>
    <string name="call_disambig_title">Choose number</string>
    <string name="make_primary">Remember this choice</string>
    <string name="description_search_button">search</string>
    <string name="description_dial_button">dial</string>
    <string name="description_digits_edittext">number to dial</string>
    <string name="description_playback_start_stop">Play or stop playback</string>
    <string name="description_playback_speakerphone">Switch on or off speakerphone</string>
    <string name="description_playback_seek">Seek playback position</string>
    <string name="description_rate_decrease">Decrease playback rate</string>
    <string name="description_rate_increase">Increase playback rate</string>
    <string name="action_menu_call_history_description">Call History</string>
    <string name="action_menu_overflow_description" msgid="2295659037509008453">More options</string>
    <string name="action_menu_dialpad_button">dial pad</string>
    <string name="menu_show_outgoing_only">Show outgoing only</string>
    <string name="menu_show_incoming_only">Show incoming only</string>
    <string name="menu_show_missed_only">Show missed only</string>
    <string name="menu_show_voicemails_only">Show voicemails only</string>
    <string name="menu_show_all_calls">Show all calls</string>
    <string name="add_2sec_pause">Add 2-sec pause</string>
    <string name="add_wait">Add wait</string>
    <string name="dialer_settings_label">Settings</string>
    <string name="menu_newContact">New contact</string>
    <string name="menu_allContacts">All contacts</string>
    <string name="callDetailTitle">Call details</string>
    <string name="toast_call_detail_error">Details not available</string>
    <string name="dialer_useDtmfDialpad">Use touch tone keypad</string>
    <string name="dialer_returnToInCallScreen">Return to call in progress</string>
    <string name="dialer_addAnotherCall">Add call</string>
    <string name="type_incoming">Incoming call</string>
    <string name="type_outgoing">Outgoing call</string>
    <string name="type_missed">Missed call</string>
    <string name="type_incoming_video">Incoming video call</string>
    <string name="type_outgoing_video">Outgoing video call</string>
    <string name="type_missed_video">Missed video call</string>
    <string name="type_voicemail">Voicemail</string>
    <string name="type_rejected">Declined call</string>
    <string name="type_blocked">Blocked call</string>
    <string name="actionIncomingCall">Incoming calls</string>
    <string name="description_call_log_play_button">Play voicemail</string>
    <string name="description_view_contact">View contact <xliff:g id="name">%1$s</xliff:g></string>
    <string name="description_call">Call <xliff:g id="name">%1$s</xliff:g></string>
    <string name="description_contact_details">Contact details for <xliff:g id="nameOrNumber">%1$s</xliff:g></string>
    <string name="description_num_calls"><xliff:g id="numberOfCalls">%1$s</xliff:g> calls.</string>
    <string name="description_video_call">Video call.</string>
    <string name="description_send_text_message">Send SMS to <xliff:g id="name">%1$s</xliff:g></string>
    <string name="description_call_log_unheard_voicemail">Unheard voicemail</string>
    <string name="description_start_voice_search">Start voice search</string>
    <string name="menu_callNumber">Call <xliff:g id="number">%s</xliff:g></string>
    <string name="unknown">Unknown</string>
    <string name="voicemail">Voicemail</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Payphone</string>
    <string name="callDetailsShortDurationFormat"><xliff:g id="seconds" example="28">%s</xliff:g> sec</string>
    <string name="callDetailsDurationFormat"><xliff:g id="minutes" example="42">%s</xliff:g> min <xliff:g id="seconds" example="28">%s</xliff:g> sec</string>
    <string name="voicemailCallLogToday">@string/call_log_header_today</string>
    <string name="voicemailCallLogDateTimeFormat"><xliff:g id="date" example="Jul 25, 2014">%1$s</xliff:g> at <xliff:g id="time" example="2:49 PM">%2$s</xliff:g></string>
    <string name="voicemailDurationFormat"><xliff:g id="minutes" example="10">%1$02d</xliff:g>:<xliff:g id="seconds" example="20">%2$02d</xliff:g></string>
    <string name="voicemailCallLogDateTimeFormatWithDuration"><xliff:g id="dateAndTime" example="Jul 25, 2014 at 2:49PM">%1$s</xliff:g> \u2022 <xliff:g id="duration" example="01:22">%2$s</xliff:g></string>
    <string name="dialog_phone_call_prohibited_message" msgid="4313552620858880999">Can\'t call this number</string>
    <string name="dialog_voicemail_not_ready_message">To set up voicemail, go to Menu &gt; Settings.</string>
    <string name="dialog_voicemail_airplane_mode_message">To call voicemail, first turn off Airplane mode.</string>
    <string name="contact_list_loading">Loading\u2026</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="simContacts_emptyLoading">Loading from SIM card\u2026</string>
    <string name="simContacts_title">SIM card contacts</string>
    <string name="add_contact_not_available">No contacts app available</string>
    <string name="voice_search_not_available">Voice search not available</string>
    <string name="call_not_available">Cannot make a phone call because the Phone application has been disabled.</string>
    <string name="activity_not_available">No app for that on this device</string>
    <string name="dialer_hint_find_contact">Search contacts</string>
    <string name="block_number_search_hint">Add number or search contacts</string>
    <string name="call_log_activity_title_font_family">sans-serif-light</string>
    <string name="view_full_call_history_font_family">sans-serif</string>
    <string name="call_log_all_empty">Your call history is empty</string>
    <string name="call_log_all_empty_action">Make a call</string>
    <string name="call_log_missed_empty">You have no missed calls.</string>
    <string name="call_log_voicemail_empty">Your voicemail inbox is empty.</string>
    <string name="voicemail_archive_empty">Your voicemail archive is empty.</string>
    <string name="show_favorites_only">Show favorites only</string>
    <string name="call_log_activity_title">Call History</string>
    <string name="voicemail_archive_activity_title">Voicemail Archive</string>
    <string name="call_log_all_title">All</string>
    <string name="call_log_missed_title">Missed</string>
    <string name="call_log_voicemail_title">Voicemail</string>
    <string name="migrate_blocked_numbers_dialog_title">New, simplified blocking</string>
    <string name="search_shortcut_create_new_contact">Create new contact</string>
    <string name="search_shortcut_add_to_contact">Add to a contact</string>
    <string name="call_log_action_video_call">Video call</string>
    <string name="call_log_action_send_message">Send a message</string>
    <string name="call_log_action_details">Call details</string>
    <string name="description_call_log_call_action">Call</string>
    <string name="voicemail_play_start_pause">Start or pause playback.</string>
</resources>